docs: sync to v0.16 reality; design.md becomes rationale-only (2.0)
- design.md 2.0: keeps decisions and reasons, "what" points at docs/01/02/07
- docs/01: real architecture (Agent + Mixin, single-lock kernel, hot path)
- docs/02: canonical event-code table, ownership matrix, stale signatures fixed
- docs/03/06: actual lifecycle state machine and build system
- docs/07: M0-M6 statuses fixed, M7 acceptance-style, agent-mode Mixin gap noted
- docs/09 + README: measured benchmark results, status table